# gentoo-interner

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs
